@@ -1,3 +1,10 @@
+Wed May 24 11:11:45 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* gss-client.c: Include string.h or strings.h
+
+	* gss-server.c: Include string.h or strings.h
+
+	* configure.in: Check for string.h
 
 Mon May 22 15:41:33 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* gss-server.c	: (server_establish_context) Don't call gss_release_
